# bnn

./: LICENSE  Makefile  README.md  __init__.py  pyproject.toml
bnn/: __init__.py  conv_layers.py  distributions.py  fc_layers.py  general.py  priordist.py  priors.py  vardist.py
bnn/distributions/: posteriors.py  priors.py
bnn/examples/: fully_bayesian.py
bnn/layers/: __init__.py  conv_layers.py  linear_layers.py
bnn/models/: BayesNet.py
bnn/utils/: __init__.py  bayesnet.py  conv_layers.py  general.py  linear_layers.py  priors.py
distributions/: posteriors.py  priors.py
examples/: fully_bayesian.py
layers/: __init__.py  conv_layers.py  linear_layers.py
utils/: __init__.py  bayesnet.py  conv_layers.py  general.py  linear_layers.py  posteriors.py  priors.py
