[tool.poetry]
name = "bnn"
version = "0.1.0"
description = "PyTorch Bayesian Neural Networks"
authors = ["Philipp Oberdiek <git@oberdiek.net>"]
readme = "README.md"
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
torch = "*"
numpy = "*"

[tool.poetry.group.examples]
optional = true

[tool.poetry.group.examples.dependencies]
torchvision = "*"

[tool.poetry.dev-dependencies]
black = "*"
flake8 = "*"
isort = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88

[tool.isort]
profile = "black"
force_sort_within_sections = true
line_length = 88
known_third_party = "bnn"
