[tool.poetry]
name = "bnn"
version = "0.1.0"
description = "PyTorch Bayesian Neural Networks"
authors = ["Philipp Oberdiek <git@oberdiek.net>"]
readme = "README.md"
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
torch = "^1.10.0"
numpy = "^1.20.0"

[tool.poetry.group.examples]
optional = true

[tool.poetry.group.examples.dependencies]
torchvision = "^0.13.0"

[tool.poetry.dev-dependencies]
black = "*"
flake8 = "*"
isort = "^5"
commitizen = "^2.37.0"
pre-commit = "^2.20.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88

[tool.isort]
profile = "black"
force_sort_within_sections = true
line_length = 88
known_third_party = "bnn"

[tool.commitizen]
name = "cz_conventional_commits_ronmckay"
version = "0.1.0"
tag_format = "v$version"
major_version_zero = true
version_files = [
    "pyproject.toml:^version"
]
update_changelog_on_bump = true
changelog_incremental = true
annotated_tag = true
use_shortcuts = true
bump_message = "bump: Version $current_version → $new_version"
